<resources>

    <string name="app_name">Memotext</string>
    <string name="action_sort">Sort by</string>
    <string name="action_settings">Settings</string>
    <string name="text_deleted">Text deleted</string>
    <string name="text_deleted_action">Undo</string>
    <string name="text_change_level_title">Level</string>
    <string name="level_bronze_msg">Level bronze (easy)</string>
    <string name="level_silver_msg">Level silver (medium)</string>
    <string name="level_gold_msg">Level gold (hard)</string>
    <string name="level_bronze">Bronze/Easy</string>
    <string name="level_silver">Silver/Medium</string>
    <string name="level_gold">Gold/Hard</string>

    <string name="sort_by_title">Title</string>
    <string name="sort_by_level">Level</string>
    <string name="sort_by_percentage">Percentage</string>
    <string name="sort_by_date">Date</string>
    <string name="title_activity_settings">Settings</string>

    <string name="add_text_title">Add text</string>
    <string name="edit_text_title">Edit text</string>
    <string name="text_title_hint">Title</string>
    <string name="text_title_hint_unmodifiable">Title (unmodifiable)</string>
    <string name="text_content_hint">Content</string>
    <string name="editor_save_button">Save</string>
    <string name="editor_save_title_error">The title is the same as that of another text, please use another</string>
    <string name="editor_save_error">Cannot save text</string>

    <string name="exercise_title">Exercise</string>
    <string name="exercise_font_bigger_description">Increase font size</string>
    <string name="exercise_font_smaller_description">Decrease font size</string>
    <string name="exercise_prepare_error">Sorry, it was not able to create an exercise for this text :(</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_level">Level</string>
    <string name="pref_header_about">About</string>

    <string name="pref_about_feedback_key" translatable="false">about_feedback</string>
    <string name="pref_about_repo_key" translatable="false">about_repo</string>
    <string name="pref_about_feedback_title">Feedback, questions and bugs</string>
    <string name="pref_about_repo_title">Free software GPLv3</string>
    <string name="email_feedback_address" translatable="false">noe.fernandez@protonmail.com</string>
    <string name="email_feedback_subject">[Memotext] Hi!</string>
    <string name="url_repo_website" translatable="false">https://github.com/nfdz/Memotext</string>
    <string name="email_feedback_error">Cannot open email app</string>
    <string name="url_repo_error">Cannot open browser app</string>

    <string name="pref_lvl_words_title">Words to hide</string>
    <string name="pref_lvl_letters_title">Word letters to hide</string>
    <string name="pref_lvl_bronze_words_key" translatable="false">bronze_words</string>
    <string name="pref_lvl_bronze_letters_key" translatable="false">bronze_letters</string>
    <string name="pref_lvl_silver_words_key" translatable="false">silver_words</string>
    <string name="pref_lvl_silver_letters_key" translatable="false">silver_letters</string>
    <string name="pref_lvl_gold_words_key" translatable="false">gold_words</string>
    <string name="pref_lvl_gold_letters_key" translatable="false">gold_letters</string>
    <string name="pref_lvl_restore_default_key" translatable="false">restore_default</string>
    <string name="pref_lvl_restore_default_title">Restore default values</string>
    <string name="pref_lvl_bronze_words_default" translatable="false">5</string>
    <string name="pref_lvl_bronze_letters_default" translatable="false">10</string>
    <string name="pref_lvl_silver_words_default" translatable="false">15</string>
    <string name="pref_lvl_silver_letters_default" translatable="false">20</string>
    <string name="pref_lvl_gold_words_default" translatable="false">30</string>
    <string name="pref_lvl_gold_letters_default" translatable="false">40</string>

    <string name="pref_sort_criteria_key" translatable="false">sort_criteria</string>
    <string name="pref_sort_criteria_default" translatable="false">TITLE</string>

</resources>
